
#add_executable(example_test_01 example_test_01.cpp)
#install(TARGETS example_test_01 DESTINATION stl)

add_executable(advance_test advance_test.cpp)
install(TARGETS advance_test DESTINATION stl)

add_executable(uninitialized_copy_test uninitialized_copy_test.cpp)
install(TARGETS uninitialized_copy_test DESTINATION stl)


add_executable(uninitialized_fill_test uninitialized_fill_test.cpp)
install(TARGETS uninitialized_fill_test DESTINATION stl)

add_executable(temporary_buffer_test temporary_buffer_test.cpp)
install(TARGETS temporary_buffer_test DESTINATION stl)

add_executable(alg_find_test alg_find_test.cpp)
install(TARGETS alg_find_test DESTINATION stl)

add_executable(alg_find_if_test alg_find_if_test.cpp)
install(TARGETS alg_find_if_test DESTINATION stl)

add_executable(alg_adjacent_find_test alg_adjacent_find_test.cpp)
install(TARGETS alg_adjacent_find_test DESTINATION stl)

add_executable(alg_find_first_of_test alg_find_first_of_test.cpp)
install(TARGETS alg_find_first_of_test DESTINATION stl)

add_executable(alg_search_test alg_search_test.cpp)
install(TARGETS alg_search_test DESTINATION stl)

add_executable(alg_find_end_test alg_find_end_test.cpp)
install(TARGETS alg_find_end_test DESTINATION stl)

add_executable(alg_search_n_test alg_search_n_test.cpp)
install(TARGETS alg_search_n_test DESTINATION stl)

add_executable(alg_count_test alg_count_test.cpp)
install(TARGETS alg_count_test DESTINATION stl)

add_executable(func_plus_minus_test func_plus_minus_test.cpp)
install(TARGETS func_plus_minus_test DESTINATION stl)

add_executable(alg_for_each_test alg_for_each_test.cpp)
install(TARGETS alg_for_each_test DESTINATION stl)

add_executable(alg_equal_test alg_equal_test.cpp)
install(TARGETS alg_equal_test DESTINATION stl)

add_executable(alg_mismatch_test alg_mismatch_test.cpp)
install(TARGETS alg_mismatch_test DESTINATION stl)

add_executable(alg_lexicographical_compare_test alg_lexicographical_compare_test.cpp)
install(TARGETS alg_lexicographical_compare_test DESTINATION stl)

add_executable(alg_min_max_test alg_min_max_test.cpp)
install(TARGETS alg_min_max_test DESTINATION stl)

add_executable(alg_copy_test alg_copy_test.cpp)
install(TARGETS alg_copy_test DESTINATION stl)

add_executable(alg_copy_backward_test alg_copy_backward_test.cpp)
install(TARGETS alg_copy_backward_test DESTINATION stl)

add_executable(alg_swap_test alg_swap_test.cpp)
install(TARGETS alg_swap_test DESTINATION stl)

add_executable(alg_swap_range_test alg_swap_range_test.cpp)
install(TARGETS alg_swap_range_test DESTINATION stl)

add_executable(alg_transform_test alg_transform_test.cpp)
install(TARGETS alg_transform_test DESTINATION stl)

add_executable(alg_replace_test alg_replace_test.cpp)
install(TARGETS alg_replace_test DESTINATION stl)

add_executable(gp_constant_test gp_constant_test.cpp)
install(TARGETS gp_constant_test DESTINATION stl)

add_executable(container_vector_test container_vector_test.cpp)
install(TARGETS container_vector_test DESTINATION stl)

add_executable(container_list_test container_list_test.cpp)
install(TARGETS container_list_test DESTINATION stl)

add_executable(container_deque_test container_deque_test.cpp)
install(TARGETS container_deque_test DESTINATION stl)

add_executable(container_set_test container_set_test.cpp)
install(TARGETS container_set_test DESTINATION stl)

add_executable(container_multiset_test container_multiset_test.cpp)
install(TARGETS container_multiset_test DESTINATION stl)

add_executable(container_map_test container_map_test.cpp)
install(TARGETS container_map_test DESTINATION stl)

add_executable(container_multimap_test container_multimap_test.cpp)
install(TARGETS container_multimap_test DESTINATION stl)

add_executable(container_stack_test container_stack_test.cpp)
install(TARGETS container_stack_test DESTINATION stl)

add_executable(container_queue_test container_queue_test.cpp)
install(TARGETS container_queue_test DESTINATION stl)

add_executable(container_priority_queue_test container_priority_queue_test.cpp)
install(TARGETS container_priority_queue_test DESTINATION stl)

add_executable(iterator_front_insert_test iterator_front_insert_test.cpp)
install(TARGETS iterator_front_insert_test DESTINATION stl)

